updated HTML file to point to renamed CSS file

--- a/templates/alertmap.html
+++ b/templates/alertmap.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>DriveBy Alert Map</title>
-	<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/showmap.css') }}">
+	<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/alertmap.css') }}">
 </head>
 <body>
 	<div class="content">
